Created notebooks for GAMA-12

--- a/dmu1/dmu1_ml_GAMA-09/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_GAMA-09/2_Merging.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# GAMA-09 master catalogue\n",
     "\n",
-    "This notebook presents the merge of the various pristine catalogues to produce HELP mater catalogue on ELAIS-N1."
+    "This notebook presents the merge of the various pristine catalogues to produce HELP mater catalogue on GAMA-09."
    ]
   },
   {
@@ -83,7 +83,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "cfhtlens = Table.read(\"{}/CFHTLENS.fits\".format(TMP_DIR))\n",
@@ -857,7 +859,9 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Aperture flux only in CFHTLS\n",
@@ -871,7 +875,9 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "megacam_origin.write(\"{}/gama-09_megacam_fluxes_origins{}.fits\".format(OUT_DIR, SUFFIX))"
@@ -1129,7 +1135,9 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "cfhtlens_moc = MOC(filename=\"../../dmu0/dmu0_CFHTLenS/data/CFHTLenS_GAMA-09_MOC.fits\")\n",
@@ -1204,7 +1212,9 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# SpARCS is a catalogue of sources detected in r (with fluxes measured at \n",
