Typo in COSMOS/Candels

--- a/dmu1/dmu1_ml_COSMOS/1.1_CANDELS-3D-HST.ipynb
+++ b/dmu1/dmu1_ml_COSMOS/1.1_CANDELS-3D-HST.ipynb
@@ -291,7 +291,7 @@
     "             'merr_candels_f606w', \n",
     "             'merr_candels_f814w',\n",
     "             'merr_candels_f125w']\n",
-    "FLAG_NAME = 'cfhtlens_flag_cleaned'\n",
+    "FLAG_NAME = 'candels_flag_cleaned'\n",
     "\n",
     "nb_orig_sources = len(catalogue)\n",
     "\n",
