--- a/dmu7/dmu7_selection_functions/selection_functions.ipynb
+++ b/dmu7/dmu7_selection_functions/selection_functions.ipynb
@@ -239,7 +239,8 @@
    "metadata": {},
    "source": [
     "## Data model\n",
-    "\n"
+    "\n",
+    "Glen et al 2010 - source counts P(D)\n"
    ]
   }
  ],
