--- a/dmu1/dmu1_ml_GAMA-15/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_GAMA-15/2_Merging.ipynb
@@ -44,7 +44,7 @@
     "import numpy as np\n",
     "from pymoc import MOC\n",
     "\n",
-    "from herschelhelp_internal.masterlist import merge_catalogues, nb_merge_dist_plot, specz_merge\n",
+    "from herschelhelp_internal.masterlist import merge_catalogues_tiled, nb_merge_dist_plot, specz_merge\n",
     "from herschelhelp_internal.utils import coords_to_hpidx, ebv, gen_help_id, inMoc"
    ]
   },
@@ -150,7 +150,7 @@
    "outputs": [],
    "source": [
     "# Given the graph above, we use 0.8 arc-second radius\n",
-    "master_catalogue = merge_catalogues(master_catalogue, hsc, \"hsc_ra\", \"hsc_dec\", radius=0.8*u.arcsec)"
+    "master_catalogue = merge_catalogues_tiled(master_catalogue, hsc, \"hsc_ra\", \"hsc_dec\", radius=0.8*u.arcsec)"
    ]
   },
   {
@@ -183,7 +183,7 @@
    "outputs": [],
    "source": [
     "# Given the graph above, we use 0.8 arc-second radius\n",
-    "master_catalogue = merge_catalogues(master_catalogue, kids, \"kids_ra\", \"kids_dec\", radius=0.8*u.arcsec)"
+    "master_catalogue = merge_catalogues_tiled(master_catalogue, kids, \"kids_ra\", \"kids_dec\", radius=0.8*u.arcsec)"
    ]
   },
   {
@@ -216,7 +216,7 @@
    "outputs": [],
    "source": [
     "# Given the graph above, we use 0.8 arc-second radius\n",
-    "master_catalogue = merge_catalogues(master_catalogue, ps1, \"ps1_ra\", \"ps1_dec\", radius=0.8*u.arcsec)"
+    "master_catalogue = merge_catalogues_tiled(master_catalogue, ps1, \"ps1_ra\", \"ps1_dec\", radius=0.8*u.arcsec)"
    ]
   },
   {
@@ -249,7 +249,7 @@
    "outputs": [],
    "source": [
     "# Given the graph above, we use 0.8 arc-second radius\n",
-    "master_catalogue = merge_catalogues(master_catalogue, las, \"las_ra\", \"las_dec\", radius=0.8*u.arcsec)"
+    "master_catalogue = merge_catalogues_tiled(master_catalogue, las, \"las_ra\", \"las_dec\", radius=0.8*u.arcsec)"
    ]
   },
   {
@@ -282,7 +282,7 @@
    "outputs": [],
    "source": [
     "# Given the graph above, we use 1 arc-second radius\n",
-    "master_catalogue = merge_catalogues(master_catalogue, viking, \"viking_ra\", \"viking_dec\", radius=1.*u.arcsec)"
+    "master_catalogue = merge_catalogues_tiled(master_catalogue, viking, \"viking_ra\", \"viking_dec\", radius=1.*u.arcsec)"
    ]
   },
   {
