[dmu1_GAMA-15] Correct merging with spec-z
The spec-z catalogue has units for RA and Dec.

--- a/dmu1/dmu1_ml_GAMA-15/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_GAMA-15/2_Merging.ipynb
@@ -486,7 +486,7 @@
    "source": [
     "nb_merge_dist_plot(\n",
     "    SkyCoord(master_catalogue['ra'], master_catalogue['dec']),\n",
-    "    SkyCoord(specz['ra'] * u.deg, specz['dec'] * u.deg)\n",
+    "    SkyCoord(specz['ra'], specz['dec'])\n",
     ")"
    ]
   },
