[dmu32_ELAIS-N1] Merge the CIGALE outputs to the catalogue

--- a/dmu32/dmu32_ELAIS-N1/ELAIS-N1_catalogue_merging.ipynb
+++ b/dmu32/dmu32_ELAIS-N1/ELAIS-N1_catalogue_merging.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "from astropy.table import Column, Table, join, vstack\n",
+    "from astropy.table import Column, MaskedColumn, Table, join, vstack\n",
     "\n",
     "from herschelhelp.filters import get_filter_meta_table\n",
     "\n",
@@ -204,6 +204,47 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Cigale outputs\n",
+    "cigale = Table.read(\"../../dmu28/dmu28_ELAIS-N1/data/HELP_final_results.fits\")\n",
+    "cigale['id'].name = \"help_id\"\n",
+    "\n",
+    "# We convert the various Chi2 and threshold to flags\n",
+    "flag_cigale_opt = cigale[\"UVoptIR_OPTchi2\"] <= cigale[\"UVoptIR_OPTchi2_threshold\"]\n",
+    "flag_cigale_ir = cigale[\"UVoptIR_IRchi2\"] <= cigale[\"UVoptIR_IRchi2_threshold\"]\n",
+    "flag_cigale = (\n",
+    "    (cigale[\"UVoptIR_best.reduced_chi_square\"] <=  cigale[\"UVoptIR_best.reduced_chi_square_threshold\"]) &\n",
+    "    flag_cigale_opt & flag_cigale_ir)\n",
+    "flag_cigale_ironly = cigale[\"IRonly_IRchi2\"] <= cigale[\"IRonly_IRchi2_threshold\"]\n",
+    "\n",
+    "cigale.add_columns([\n",
+    "    MaskedColumn(flag_cigale, \"flag_cigale\", dtype=int, fill_value=-1),\n",
+    "    MaskedColumn(flag_cigale_opt, \"flag_cigale_opt\", dtype=int, fill_value=-1),\n",
+    "    MaskedColumn(flag_cigale_ir, \"flag_cigale_ir\", dtype=int, fill_value=-1),\n",
+    "    MaskedColumn(flag_cigale_ironly, \"flag_cigale_ironly\", dtype=int, fill_value=-1)\n",
+    "])\n",
+    "\n",
+    "cigale['UVoptIR_bayes.stellar.m_star'].name =  \"cigale_mstar\"\n",
+    "cigale['UVoptIR_bayes.stellar.m_star_err'].name = \"cigale_mstar_err\"\n",
+    "cigale['UVoptIR_bayes.sfh.sfr10Myrs'].name = \"cigale_sfr\"\n",
+    "cigale['UVoptIR_bayes.sfh.sfr10Myrs_err'].name = \"cigale_sfr_err\"\n",
+    "cigale['UVoptIR_bayes.dust.luminosity'].name = \"cigale_dustlumin\"\n",
+    "cigale['UVoptIR_bayes.dust.luminosity_err'].name = \"cigale_dustlumin_err\"\n",
+    "cigale['IR_bayes.dust.luminosity'].name = \"cigale_dustlumin_ironly\"\n",
+    "cigale['IR_bayes.dust.luminosity_err'].name = \"cigale_dustlumin_ironly_err\"\n",
+    "\n",
+    "cigale = cigale['help_id', 'cigale_mstar', 'cigale_mstar_err', 'cigale_sfr', 'cigale_sfr_err',\n",
+    "               'cigale_dustlumin', 'cigale_dustlumin_err', 'cigale_dustlumin_ironly', 'cigale_dustlumin_ironly_err',\n",
+    "               'flag_cigale', 'flag_cigale_opt', 'flag_cigale_ir', 'flag_cigale_ironly']"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -212,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -233,7 +274,9 @@
     "    if 'flag' in col:\n",
     "        merged_table[col].fill_value = False\n",
     "\n",
-    "merged_table = join(merged_table, photoz, join_type='left')"
+    "merged_table = join(merged_table, photoz, join_type='left')\n",
+    "\n",
+    "merged_table = join(merged_table, cigale, join_type='left')"
    ]
   },
   {
@@ -245,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -258,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -272,20 +315,23 @@
     "        colname = col_tpl.format(band)\n",
     "        if colname in merged_table.colnames:\n",
     "            columns.append(colname)\n",
-    "columns += ['stellarity', 'flag_cleaned', 'flag_merged', 'flag_gaia', \n",
+    "columns += ['cigale_mstar', 'cigale_mstar_err', 'cigale_sfr', 'cigale_sfr_err',\n",
+    "            'cigale_dustlumin', 'cigale_dustlumin_err', 'cigale_dustlumin_ironly', 'cigale_dustlumin_ironly_err',\n",
+    "            'flag_cigale', 'flag_cigale_opt', 'flag_cigale_ir', 'flag_cigale_ironly',\n",
+    "            'stellarity', 'flag_cleaned', 'flag_merged', 'flag_gaia', \n",
     "            'flag_optnir_obs', 'flag_optnir_det', 'zspec_qual', 'zspec_association_flag']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# Check that we did not forget any column\n",
-    "assert(set(columns) == set(merged_table.colnames))\n"
+    "assert set(columns) == set(merged_table.colnames)\n"
    ]
   },
   {
@@ -297,13 +343,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "merged_table[columns].write(\"data/ELAIS-N1_20170816.fits\")"
+    "merged_table[columns].write(\"data/ELAIS-N1_20171006.fits\")"
    ]
   }
  ],
