GAMA-12 ready to run on Vulcain. Suprime total g all set to nan. Waiting for new catalogues with good total g.

--- a/dmu1/dmu1_ml_GAMA-12/1.6_VISTA-VIKING.ipynb
+++ b/dmu1/dmu1_ml_GAMA-12/1.6_VISTA-VIKING.ipynb
@@ -147,6 +147,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Conversion from Vega magnitudes to AB is done using values from \n",
+    "# http://casu.ast.cam.ac.uk/surveys-projects/vista/technical/filter-set\n",
+    "vega_to_ab = {\n",
+    "    \"z\": 0.521,\n",
+    "    \"y\": 0.618,\n",
+    "    \"j\": 0.937,\n",
+    "    \"h\": 1.384,\n",
+    "    \"k\": 1.839\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {
     "collapsed": true
@@ -163,7 +182,9 @@
     "        catalogue[col][catalogue[col] <= 0] = np.nan\n",
     "        catalogue[errcol][catalogue[errcol] <= 0] = np.nan  \n",
     "        \n",
-    "\n",
+    "        # Convert magnitude from Vega to AB\n",
+    "        catalogue[col] += vega_to_ab[col[-1]]\n",
+    "        \n",
     "        flux, error = mag_to_flux(np.array(catalogue[col]), np.array(catalogue[errcol]))\n",
     "        \n",
     "        # Fluxes are added in µJy\n",
