--- a/dmu32/dmu32_ELAIS-N1/ELAIS-N1_catalogue_merging.ipynb
+++ b/dmu32/dmu32_ELAIS-N1/ELAIS-N1_catalogue_merging.ipynb
@@ -8,6 +8,17 @@
    },
    "outputs": [],
    "source": [
+    "FIRST_RUN_FOR_CIGALE = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "import numpy as np\n",
     "\n",
     "from astropy.table import Column, MaskedColumn, Table, join, vstack\n",
@@ -24,12 +35,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Reading the catalogues"
+    "# Reading the masterlist, XID+, and photo-z catalogues"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -37,13 +48,13 @@
    "source": [
     "# Master list\n",
     "\n",
-    "ml = Table.read(\"../../dmu1/dmu1_ml_ELAIS-N1/data/master_catalogue_elais-n1_20170815.fits\")\n",
+    "ml = Table.read(\"../../dmu1/dmu1_ml_ELAIS-N1/data/master_catalogue_elais-n1_20171016.fits\")\n",
     "ml.meta = None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -74,10 +85,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -132,9 +141,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -185,9 +194,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -204,10 +213,135 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Merging"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "merged_table = join(ml, xid_mips24, join_type='left')\n",
+    "\n",
+    "# Fill values\n",
+    "for col in xid_mips24.colnames:\n",
+    "    if col.startswith(\"f_\") or col.startswith(\"ferr_\"):\n",
+    "        merged_table[col].fill_value = np.nan\n",
+    "    elif col.startswith(\"flag_\"):\n",
+    "        merged_table[col].fill_value = False\n",
+    "merged_table = merged_table.filled()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "merged_table = join(merged_table, xid_pacs, join_type='left')\n",
+    "        \n",
+    "# Fill values\n",
+    "for col in xid_pacs.colnames:\n",
+    "    if col.startswith(\"f_\") or col.startswith(\"ferr_\"):\n",
+    "        merged_table[col].fill_value = np.nan\n",
+    "    elif col.startswith(\"flag_\"):\n",
+    "        merged_table[col].fill_value = False\n",
+    "merged_table = merged_table.filled()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "merged_table = join(merged_table, xid_spire, join_type='left')\n",
+    "        \n",
+    "# Fill values\n",
+    "for col in xid_spire.colnames:\n",
+    "    if col.startswith(\"f_\") or col.startswith(\"ferr_\"):\n",
+    "        merged_table[col].fill_value = np.nan\n",
+    "    elif col.startswith(\"flag_\"):\n",
+    "        merged_table[col].fill_value = False\n",
+    "merged_table = merged_table.filled()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "merged_table = join(merged_table, photoz, join_type='left')\n",
+    "\n",
+    "# Fill values\n",
+    "merged_table['redshift'].fill_value = np.nan\n",
+    "merged_table = merged_table.filled()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Saving the catalogue for CIGALE (first run)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if FIRST_RUN_FOR_CIGALE:\n",
+    "    \n",
+    "    # Sorting the columns\n",
+    "    bands = [col[2:] for col in merged_table.colnames\n",
+    "             if col.startswith('f_') and not col.startswith('f_ap')]\n",
+    "    bands.sort(key=lambda x: filter_mean_lambda[x])\n",
+    "    \n",
+    "    columns = ['help_id', 'field', 'ra', 'dec', 'hp_idx', 'ebv', 'redshift', 'zspec']\n",
+    "    for band in bands:\n",
+    "        for col_tpl in ['f_{}', 'ferr_{}', 'f_ap_{}', 'ferr_ap_{}',\n",
+    "                        'm_{}', 'merr_{}', 'm_ap_{}', 'merr_ap_{}',\n",
+    "                        'flag_{}']:\n",
+    "            colname = col_tpl.format(band)\n",
+    "            if colname in merged_table.colnames:\n",
+    "                columns.append(colname)\n",
+    "    columns += ['stellarity', 'stellarity_origin', 'flag_cleaned', 'flag_merged', 'flag_gaia', \n",
+    "                'flag_optnir_obs', 'flag_optnir_det', 'zspec_qual', 'zspec_association_flag']\n",
+    "    \n",
+    "\n",
+    "    # Check that we did not forget any column\n",
+    "    assert set(columns) == set(merged_table.colnames)\n",
+    "    \n",
+    "    \n",
+    "    merged_table[columns].write(\"data/ELAIS-N1_20171020_cigale.fits\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Mergin CIGALE outputs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -245,38 +379,22 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Merging"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "merged_table = join(ml, xid_mips24, join_type='left')\n",
-    "for col in merged_table.colnames:\n",
-    "    if 'flag' in col:\n",
-    "        merged_table[col].fill_value = False\n",
+    "merged_table = join(merged_table, cigale, join_type='left')\n",
     "\n",
-    "merged_table = join(merged_table, xid_pacs, join_type='left')\n",
-    "for col in merged_table.colnames:\n",
-    "    if 'flag' in col:\n",
-    "        merged_table[col].fill_value = False\n",
-    "\n",
-    "merged_table = join(merged_table, xid_spire, join_type='left')\n",
-    "for col in merged_table.colnames:\n",
-    "    if 'flag' in col:\n",
-    "        merged_table[col].fill_value = False\n",
-    "\n",
-    "merged_table = join(merged_table, photoz, join_type='left')\n",
-    "\n",
-    "merged_table = join(merged_table, cigale, join_type='left')"
+    "# Fill values\n",
+    "for col in cigale.colnames:\n",
+    "    if col.startswith(\"cigale_\"):\n",
+    "        merged_table[col].fill_value = np.nan\n",
+    "    elif col.startswith(\"flag_\"):\n",
+    "        merged_table[col].fill_value = -1\n",
+    "merged_table = merged_table.filled()"
    ]
   },
   {
@@ -288,9 +406,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -301,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -318,20 +436,20 @@
     "columns += ['cigale_mstar', 'cigale_mstar_err', 'cigale_sfr', 'cigale_sfr_err',\n",
     "            'cigale_dustlumin', 'cigale_dustlumin_err', 'cigale_dustlumin_ironly', 'cigale_dustlumin_ironly_err',\n",
     "            'flag_cigale', 'flag_cigale_opt', 'flag_cigale_ir', 'flag_cigale_ironly',\n",
-    "            'stellarity', 'flag_cleaned', 'flag_merged', 'flag_gaia', \n",
+    "            'stellarity', 'stellarity_origin', 'flag_cleaned', 'flag_merged', 'flag_gaia', \n",
     "            'flag_optnir_obs', 'flag_optnir_det', 'zspec_qual', 'zspec_association_flag']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Check that we did not forget any column\n",
-    "assert set(columns) == set(merged_table.colnames)\n"
+    "assert set(columns) == set(merged_table.colnames)"
    ]
   },
   {
@@ -343,13 +461,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "merged_table[columns].write(\"data/ELAIS-N1_20171006.fits\")"
+    "merged_table[columns].write(\"data/ELAIS-N1_20171020.fits\")"
    ]
   }
  ],
