[dmu28_ELAIS-N1] Update catalogue preparation notebook

--- a/dmu28/dmu28_ELAIS-N1/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_ELAIS-N1/CIGALE_catalogue_preparation.ipynb
@@ -17,6 +17,7 @@
    "source": [
     "import numpy as np\n",
     "import os\n",
+    "os.environ['LOG_LEVEL'] = 'INFO'\n",
     "\n",
     "from astropy.table import Table\n",
     "\n",
@@ -32,7 +33,7 @@
    },
    "outputs": [],
    "source": [
-    "master_catalogue = Table.read(\"../../dmu32/dmu32_ELAIS-N1/data/ELAIS-N1_20170816_cigale.fits\")"
+    "master_catalogue = Table.read(\"../../dmu32/dmu32_ELAIS-N1/data/ELAIS-N1_20171020_cigale.fits\")"
    ]
   },
   {
@@ -70,7 +71,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "good = {}\n",
@@ -82,9 +85,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will keep only sources with at leat 2 good far-IR measurements (we may actually use less sources are not all may have a redshift)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "combined_good = np.sum(list(good.values()), axis=0) >= 2"
@@ -117,7 +129,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "best_catalogue = master_catalogue[combined_good].copy()"
@@ -138,27 +152,20 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/anaconda3/envs/herschelhelp_internal/lib/python3.6/site-packages/numpy/ma/core.py:852: RuntimeWarning: invalid value encountered in greater_equal\n",
-      "  return umath.absolute(a) * self.tolerance >= umath.absolute(b)\n",
-      "/opt/anaconda3/envs/herschelhelp_internal/lib/python3.6/site-packages/astropy/table/column.py:1096: MaskedArrayFutureWarning: setting an item on a masked array which has a shared mask will not copy the mask and also change the original mask array in the future.\n",
-      "Check the NumPy 1.11 release notes for more information.\n",
-      "  ma.MaskedArray.__setitem__(self, index, value)\n",
-      "/opt/herschelhelp_python/herschelhelp/external.py:120: RuntimeWarning: invalid value encountered in greater\n",
-      "  below_ly = np.where(FILTER_MIN_LAMBDAS[band] < lyman_limit_at_z)[0]\n",
       "INFO:herschelhelp.external:For 2572 sources, the band wfc_u should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
       "INFO:herschelhelp.external:For 1745 sources, the band megacam_u should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
       "INFO:herschelhelp.external:For 924 sources, the band suprime_g should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
       "INFO:herschelhelp.external:For 909 sources, the band megacam_g should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
       "INFO:herschelhelp.external:For 929 sources, the band gpc1_g should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
       "INFO:herschelhelp.external:For 878 sources, the band wfc_g should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
-      "/opt/anaconda3/envs/herschelhelp_internal/lib/python3.6/site-packages/numpy/ma/core.py:852: RuntimeWarning: invalid value encountered in multiply\n",
-      "  return umath.absolute(a) * self.tolerance >= umath.absolute(b)\n",
       "INFO:herschelhelp.external:For 490 sources, the band suprime_r should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
       "INFO:herschelhelp.external:For 446 sources, the band gpc1_r should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
       "INFO:herschelhelp.external:For 340 sources, the band wfc_r should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
@@ -171,8 +178,7 @@
    ],
    "source": [
     "# Convertion to CIGALE format\n",
-    "os.environ['DEBUG'] = 'info'\n",
-    "best_catalogue = convert_table_for_cigale(best_catalogue, inplace=True)"
+    "best_catalogue = convert_table_for_cigale(best_catalogue, inplace=True, remove_zerofluxes=True)"
    ]
   },
   {
@@ -210,18 +216,10 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/envs/herschelhelp_internal/lib/python3.6/site-packages/astropy/table/column.py:1096: MaskedArrayFutureWarning: setting an item on a masked array which has a shared mask will not copy the mask and also change the original mask array in the future.\n",
-      "Check the NumPy 1.11 release notes for more information.\n",
-      "  ma.MaskedArray.__setitem__(self, index, value)\n"
-     ]
-    }
-   ],
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "remove_unneeded_fluxes(g_bands)\n",
     "remove_unneeded_fluxes(u_bands)\n",
@@ -234,12 +232,10 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "best_catalogue.write(\"data_tmp/ELAIS-N1_cigale_best_extcor_20171019.fits\")"
+    "best_catalogue.write(\"data_tmp/ELAIS-N1_cigale_best_extcor_20171020.fits\")"
    ]
   },
   {
@@ -275,7 +271,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "best_catalogue = best_catalogue[~np.isnan(best_catalogue[\"redshift\"])]"
@@ -319,11 +317,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/anaconda3/envs/herschelhelp_internal/lib/python3.6/site-packages/numpy/ma/core.py:852: RuntimeWarning: invalid value encountered in greater_equal\n",
-      "  return umath.absolute(a) * self.tolerance >= umath.absolute(b)\n",
-      "/opt/anaconda3/envs/herschelhelp_internal/lib/python3.6/site-packages/astropy/table/column.py:1096: MaskedArrayFutureWarning: setting an item on a masked array which has a shared mask will not copy the mask and also change the original mask array in the future.\n",
-      "Check the NumPy 1.11 release notes for more information.\n",
-      "  ma.MaskedArray.__setitem__(self, index, value)\n",
       "INFO:herschelhelp.external:For 70 sources, the band wfc_u should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
       "INFO:herschelhelp.external:For 46 sources, the band megacam_u should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
       "INFO:herschelhelp.external:For 26 sources, the band suprime_g should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
@@ -342,25 +335,17 @@
    ],
    "source": [
     "# Convertion to CIGALE format\n",
-    "os.environ['DEBUG'] = 'info'\n",
-    "best_catalogue = convert_table_for_cigale(best_catalogue, inplace=True)"
+    "os.environ['LOG_LEVEL'] = 'INFO'\n",
+    "best_catalogue = convert_table_for_cigale(best_catalogue, inplace=True, remove_zerofluxes=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/envs/herschelhelp_internal/lib/python3.6/site-packages/astropy/table/column.py:1096: MaskedArrayFutureWarning: setting an item on a masked array which has a shared mask will not copy the mask and also change the original mask array in the future.\n",
-      "Check the NumPy 1.11 release notes for more information.\n",
-      "  ma.MaskedArray.__setitem__(self, index, value)\n"
-     ]
-    }
-   ],
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "remove_unneeded_fluxes(g_bands)\n",
     "remove_unneeded_fluxes(u_bands)\n",
@@ -372,13 +357,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "best_catalogue.write(\"data_tmp/ELAIS-N1_cigale_best_extcor_zspec_20171019.fits\")"
+    "best_catalogue.write(\"data_tmp/ELAIS-N1_cigale_best_extcor_zspec_20171020.fits\")"
    ]
   }
  ],
