--- a/dmu1/dmu1_ml_GAMA-09/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_GAMA-09/2_Merging.ipynb
@@ -631,6 +631,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "stellarity_columns = [column for column in master_catalogue.colnames\n",
+    "                      if 'stellarity' in column]\n",
+    "\n",
+    "print(\", \".join(stellarity_columns))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 26,
    "metadata": {
     "collapsed": false
@@ -646,9 +660,6 @@
     }
    ],
    "source": [
-    "stellarity_columns = [column for column in master_catalogue.colnames\n",
-    "                      if 'stellarity' in column]\n",
-    "\n",
     "master_catalogue.add_column(Column(\n",
     "    data=np.nanmax([master_catalogue[column] for column in stellarity_columns], axis=0),\n",
     "    name=\"stellarity\"\n",
@@ -1551,7 +1562,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
