All XMM-LSS pristine catalogues  running

--- a/dmu1/dmu1_ml_XMM-LSS/1.10_PanSTARRS1-3SS.ipynb
+++ b/dmu1/dmu1_ml_XMM-LSS/1.10_PanSTARRS1-3SS.ipynb
@@ -106,7 +106,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "imported_columns = OrderedDict({\n",
@@ -149,7 +151,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Adding flux and band-flag columns\n",
